<resources>
    <string name="app_name">mdz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="social_login">Social Login</string>
    <string name="title_app">MDZ Barber</string>
    <string name="facebook">Facebook</string>
    <string name="github">Github</string>
    <string name="twitter">Twitter</string>
    <string name="home">Home</string>
    <string name="turns">Turns</string>
    <string name="profile">Profile</string>

    <string name="description">MDZ nació con el propósito de ayudar a mejorar la autopercepción de las personas a partir de la salud y la estética capilar. Nuestra misión es obtener la imagen deseada por nuestros clientes mediante un servicio conceptual nunca visto en el país. Usamos herramientas como la Inteligencia Artificial y productos de última generación para que nuestra tropa consiga el look que desea.

</string>
</resources>