<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:padding="32dp"
    android:background="@color/primary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_app"
            android:textSize="48sp"
            android:textStyle="bold"
            android:textColor="@color/crowdedGold"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="18sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:inputType="textEmailAddress"
            android:id="@+id/etEmail"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/lightGold"
            android:textColor="@color/gold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            android:background="@drawable/rounded_corner"
            android:padding="16dp"
            android:inputType="textPassword"
            android:id="@+id/etPassword"
            android:layout_marginTop="24dp"
            android:textColorHint="@color/lightGold"
            android:textColor="@color/gold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="18dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/gold"
            android:id="@+id/btnLogin"
            android:backgroundTint="@color/primaryLight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_login"
            android:textSize="18sp"
            android:textColor="@color/heavyGold"
            android:layout_marginTop="32dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_facebook"
                app:tint="@color/secondary"
                android:contentDescription="@string/facebook"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_github"
                app:tint="@color/secondary"
                android:contentDescription="@string/github"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="16dp"
                android:src="@drawable/ic_twitter"
                app:tint="@color/secondary"
                android:contentDescription="@string/twitter"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>